--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Tauri + Yew App</title>
+    <title>GabrielExists - Strange Facility v2</title>
     <link data-trunk rel="tailwind-css" href="tailwind.css" />
   </head>
   <body></body>
