--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>GabrielExists - Strange Facility v2</title>
+    <title>GabrielExists - Strange Facility v3</title>
     <link data-trunk rel="tailwind-css" href="tailwind.css" />
   </head>
-  <body></body>
+  <body class="bg-blue-100"></body>
 </html>
